--- a/patownships/index.html
+++ b/patownships/index.html
@@ -89,11 +89,25 @@
   let darkMode = true; // default start in dark mode
 
   const map = L.map('map').setView([40.2732, -76.8867], 8);
-  let tileLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-    attribution: '&copy; OpenStreetMap contributors & CartoDB',
-    subdomains: 'abcd',
-    maxZoom: 19
-  }).addTo(map);
+
+  // Ensure dark mode is active on page load
+  if (darkMode) {
+    document.body.style.backgroundColor = "#111";
+    document.body.style.color = "#eee";
+    document.getElementById('update-time').style.backgroundColor = "#222";
+
+    // Dark tile layer
+    tileLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; OpenStreetMap contributors & CartoDB',
+      subdomains: 'abcd',
+      maxZoom: 19
+    }).addTo(map);
+  } else {
+    tileLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors',
+      maxZoom: 19
+    }).addTo(map);
+  }
 
   let townshipLayer;
   let currentHighlight = null;
@@ -271,41 +285,40 @@
     const data = Array.from(visitedTownships).join("\n");
     const blob = new Blob([data], { type: "text/plain" });
     const url = URL.createObjectURL(blob);
-
     const a = document.createElement('a');
     a.href = url;
     a.download = "visited_municipalities.txt";
-    document.body.appendChild(a);
     a.click();
-    document.body.removeChild(a);
+  }
+
+  function locationError(error) {
+    console.warn(`Geolocation error: ${error.message}`);
+    document.getElementById('info').textContent = "Unable to retrieve your location.";
   }
 
   function toggleTheme() {
     darkMode = !darkMode;
-    map.removeLayer(tileLayer);
 
     if (darkMode) {
+      document.body.style.backgroundColor = "#111";
+      document.body.style.color = "#eee";
+      document.getElementById('update-time').style.backgroundColor = "#222";
+
       tileLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
         attribution: '&copy; OpenStreetMap contributors & CartoDB',
         subdomains: 'abcd',
         maxZoom: 19
       }).addTo(map);
-      document.body.style.backgroundColor = "#111";
-      document.body.style.color = "#eee";
-      document.getElementById('update-time').style.backgroundColor = "#222";
     } else {
+      document.body.style.backgroundColor = "#fff";
+      document.body.style.color = "#111";
+      document.getElementById('update-time').style.backgroundColor = "#f1f1f1";
+
       tileLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; OpenStreetMap contributors',
         maxZoom: 19
       }).addTo(map);
-      document.body.style.backgroundColor = "#fff";
-      document.body.style.color = "#000";
-      document.getElementById('update-time').style.backgroundColor = "#ccc";
     }
-  }
-
-  function locationError(err) {
-    console.warn(`ERROR(${err.code}): ${err.message}`);
   }
 </script>
 
