--- a/patownships/index.html
+++ b/patownships/index.html
@@ -29,6 +29,7 @@
       border-radius: 5px;
       font-size: 14px;
       background-color: #222;
+      z-index: 1000;
     }
     #visited {
       padding: 10px;
@@ -67,6 +68,21 @@
       background: #4caf50;
       transition: width 0.5s;
     }
+
+    /* Responsive styling */
+    @media (max-width: 768px) {
+      #update-time {
+        display: none;
+      }
+    }
+
+    @media (min-width: 769px) and (max-width: 1024px) {
+      #update-time {
+        top: auto;
+        bottom: 10px;
+        right: 10px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -88,8 +104,9 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
 
+<!-- Full JS remains unchanged -->
 <script>
-  let darkMode = true; // default start in dark mode
+  let darkMode = true;
 
   const map = L.map('map').setView([40.2732, -76.8867], 8);
   let tileLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
@@ -210,7 +227,6 @@
 
     townshipLayer.eachLayer(function(layer) {
       const muniName = layer.feature.properties.MUNICIPAL_NAME || "";
-
       const cleanMuni = muniName.replace(/(Township|City|Borough|Municipality|of)/gi, "").trim().toLowerCase();
       const cleanCurrent = townshipName.replace(/(Township|City|Borough|Municipality|of)/gi, "").trim().toLowerCase();
 
